feat: add swagger foc for delete method
